# PetriEngine

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/net/: connection.rs  mod.rs  net.rs  place.rs  simulation.rs  transition.rs
src/ui/: mod.rs
