[package]
name = "petri_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-table = "6.1.0"
derivative = "2.2.0"
rand = "0.8.5"

[dependencies.uuid]
features = [
    "v4",
    "fast-rng",
]
